--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -19,6 +21,13 @@ body {
   background-color: $white;
   line-height: 1.6;
   overflow-x: hidden;
+  width: 100%;
+}
+
+.app {
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
